[package]
name = "glacio"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
actix-web = "0.7"
camera = { path = "camera" }
chrono = "0.4"
clap = { version = "2.32", features = ["yaml"] }
listenfd = "0.3"
prettytable-rs = "0.7"
web = { path = "web" }

[workspace]
members = ["atlas", "camera", "sutron", "web"]
