[package]
name = "atlas"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]

[dependencies]
byteorder = "1.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "2.27", features = ["yaml"] }
lazy_static = "1.1"
failure = "0.1"
regex = "1.0"
sbd = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sutron = { path = "../sutron" }
